<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".activities.NewMemoryActivity">

    <ImageView
        android:id="@+id/new_memory_selected_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/placeholder" />

    <EditText
        android:id="@+id/new_memory_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_memory_title_hint" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openCamera"
        android:text="@string/new_memory_btn_camera" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openGallery"
        android:text="@string/new_memory_btn_gallery" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/new_memory_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/new_memory_btn_cancel" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="save"
            android:text="@string/new_memory_btn_save" />
    </LinearLayout>

</LinearLayout>